kubernetes/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ubisoft-backend-interview
  name: ubisoft-backend-interview
