kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ubisoft-backend-interview
  labels:
    app: ubisoft-backend-interview
    component: app
spec:
  type: ClusterIP
  selector:
    app: ubisoft-backend-interview
    component: app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
