kubernetes/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ubisoft-backend-interview
  labels:
    app: ubisoft-backend-interview
    component: db
spec:
  type: ClusterIP
  selector:
    app: ubisoft-backend-interview
    component: db
  ports:
  - name: db
    port: 5432
    protocol: TCP
    targetPort: db
