kubernetes/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: ubisoft-backend-interview
  labels:
    app: ubisoft-backend-interview
    component: app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: ubisoft-backend-interview.cloud.play-net.org
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
